Add `DecisionEngineSpringWiringTest` and related documentation to validate Spring context wiring and singleton scope of `DecisionEngine` and `ScenarioEngine`.